fixed video issue

--- a/templates/create-article.html
+++ b/templates/create-article.html
@@ -22,7 +22,7 @@
         <input type="checkbox" class="form-check-input" id="exampleCheck1" name="featured" unchecked>
         <label class="form-check-label" for="exampleCheck1">Make Featured</label>
       </div> <br>
-    <p><input class="btn btn-primary" type="submit" value="Submit">
+    <input class="btn btn-primary" type="submit" value="Submit">
   </form>
 
   <br> <br>
