--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -29,6 +29,11 @@
             <div class="btn btn-primary">
                 <a class="btn btn-primary" href="/spotlight-content-upload">Splotlight Content Upload</a>
             </div>
+            <div class="btn btn-danger">
+                <a class="btn btn-danger" href="/services-upload">Services Upload</a>
+            </div><div class="btn btn-warning">
+                <a class="btn btn-warning" href="/upload-videos">Upload Videos</a>
+            </div>
         </div>
     </div>
 {% endblock %}
