--- a/templates/html-css-js/contactus.html
+++ b/templates/html-css-js/contactus.html
@@ -26,14 +26,7 @@
                 <a class="nav-item" href="/">
                     <img id="nav-logo" src="static/Assets/logo.svg" alt="">
                 </a>
-                <div id="mid-nav">
-                    <a class="nav-item" href="/spotlight">Spotlight</a>
-                    <a class="nav-item" href="/products">Products</a>
-                    <a class="nav-item" href="/services">Services</a>
-                    <a class="nav-item" href="/studio">Studio</a>
-                    <a class="nav-item" href="/news">News</a>
-                    <a class="nav-item" href="/contactus">Contact</a>
-                </div>
+              {% include 'html-css-js/mid-nav.html' %}
                 <a class="nav-item" onclick="modeToggle()">
                     <img id="nav-mode" src="static/Assets/sun.svg" alt="">
                 </a>
