--- a/templates/html-css-js/studio.html
+++ b/templates/html-css-js/studio.html
@@ -102,9 +102,11 @@
             </div>
         </section>
         <div id="brand-sec" class="">
-            <img src="static/Assets/Studio/nissan.svg" alt="">
+            <img class="lightmode-item" src="static/Assets/Studio/nissan.svg" alt="">
+            <img class="darkmode-item" src="static/light-img/nissan.svg" alt="">
             <img src="static/Assets/Studio/bmw.svg" alt="">
-            <img src="static/Assets/Studio/honda.svg" alt="">
+            <img class="lightmode-item" src="static/Assets/Studio/honda.svg" alt="">
+            <img class="darkmode-item" src="static/light-img/honda.svg" alt="">
         </div>
 
 
@@ -161,16 +163,16 @@
         <div id="slider" class="img1">
             
             <span class="image-container">
-                <img src="static/img/{{images[0]['img1']}}" alt="">
+                <img src="static/img/{{images[0]}}" alt="">
             </span>
             <span class="image-container">
-                <img src="static/img/{{images[0]['img2']}}" alt="">
+                <img src="static/img/{{images[1]}}" alt="">
             </span>
             <span class="image-container">
-                <img src="static/img/{{images[0]['img3']}}" alt="">
+                <img src="static/img/{{images[2]}}" alt="">
             </span>
             <span class="image-container">
-                <img src="static/img/{{images[0]['img4']}}" alt="">
+                <img src="static/img/{{images[3]}}" alt="">
             </span>
         </div>
         <div class="slider-controls">
