--- a/static/CSS/home.css
+++ b/static/CSS/home.css
@@ -86,7 +86,13 @@
     font-weight: 400;
     color: #525252;
 }
-
+/* Hero video */
+.hero-video{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    margin:3rem 0;
+}
 /* main Animation CSS */
 
 #svg-container{
