--- a/static/CSS/spotlight_2.css
+++ b/static/CSS/spotlight_2.css
@@ -142,3 +142,146 @@ text.impressions{
     stroke: white;
 }
 
+
+video{
+    width: 500px;
+    height: auto;
+}
+
+#hero2 {
+    width: 100%;
+    height: 100vh;
+    /* height: fit-content; */
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.video1_title{
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 200;
+    font-size: 5.0em;
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    top: 200px;
+    color: #C3C3C3;
+}
+.video{
+    border-radius: 5px;
+    /* border: 1px solid white; */
+}
+.video_1{
+    width: 50%;
+    position: absolute;
+    top: 300px;
+    left: 50%;
+    transform: translate(-50%, 0);
+}
+
+.line_1{
+    width: 70%;
+    height: 2px;
+    background-color: white;
+    opacity: 0.4;
+    margin: 0 auto;
+}
+
+.line_2{
+    width: 45%;
+    height: 2px;
+    background-color: white;
+    opacity: 0.4;
+    margin: 0 auto;
+}
+
+.row_video{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 100px 0;
+}
+
+.row_element{
+    width: 45%;
+    height: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.rw2{
+    align-items: flex-start;
+}
+
+.video_2{
+    width: 80%;
+    height: auto;
+}
+
+.row_element > h2{
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 4.5em;
+    color: #C3C3C3;
+    margin-bottom: 20px;
+}
+
+.row_element > p{
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 2.2em;
+    color: #898989;
+}
+
+.video_3{
+    width: 50%;
+    margin: 0 25%;
+}
+
+.video4_title{
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 200;
+    font-size: 5.0em;
+    width: 100%;
+    text-align: center;
+    color: #C3C3C3;
+    margin: 200px 0 50px 0;
+}
+#page{
+    font-size: 10px;
+}
+
+@media screen and (max-width: 1225px) {
+    #page{
+        font-size: 9px;
+    }
+    .video_1{
+        top: 40%;
+        width: 70%;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    #page{
+        font-size: 8px;
+    }
+    .video_1{
+        width: 95%;
+    }
+}
+
+
+@media screen and (max-width: 500px) {
+    #page{
+        font-size: 4px;
+    }
+}
