--- a/static/CSS/base.css
+++ b/static/CSS/base.css
@@ -9,8 +9,8 @@
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-background: #0400ff;
-border: #0400ff8a 2px solid;
+background: #5982c0;
+border: #5982c0 2px solid;
 border-radius: 10px;
 }
 
