--- a/templates/html-css-js/products.html
+++ b/templates/html-css-js/products.html
@@ -90,18 +90,44 @@
             <h1>Our Products</h1>
             <div id="products-container" class="">
                 <div class="product ">
-                    <h3>Everest Bundle</h3>
+                    <h3>Rainier Bundle <br> <span style="color:#5982c2;position: relative; top: 10px;">$6200</span></h3>
+                    
                     <div class="prod-feature">
                         <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>Spend 13.8K</p>
+                        <p>125 CRM Leads</p>
                     </div>
                     <div class="prod-feature">
                         <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>350 Chats Engaged</p>
+                        <p>160 Chats</p>
                     </div>
                     <div class="prod-feature">
                         <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>400 CRM Leads</p>
+                        <p>1000 Monthly Clicks</p>
+                    </div>
+                    <div class="prod-feature">
+                        <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
+                        <p>1 Text Blast</p>
+                    </div>
+                    <div class="prod-feature">
+                        <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
+                        <p>1 Video Stream</p>
+                    </div>
+                    
+                    <a class="choose-plan-btn" href="/contactus">
+                        <img src="static/Assets/Products/just_tick.svg" alt="">
+                    </a>
+                </div>
+                <div class="product main_product">
+                    <h3>Base Camp <br> <span style="color:#5982c2;position: relative; top: 10px;">$2900</span></h3>
+                    <div class="prod-feature">
+                        <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
+                        <p>50 CRM Leads
+                        </p>
+                    </div>
+                    <div class="prod-feature">
+                        <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
+                        <p>50 Chats
+                        </p>
                     </div>
                     <div class="prod-feature">
                         <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
@@ -109,86 +135,36 @@
                     </div>
                     <div class="prod-feature">
                         <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>Weekly Text Blasts</p>
+                        <p>1 Video Stream</p>
                     </div>
-                    <div class="prod-feature">
-                        <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>Commercial Streaming</p>
-                    </div>
-                    <div class="prod-feature">
-                        <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>Quaterly Hiring Event</p>
-                    </div>
+                    
                     <a class="choose-plan-btn" href="/contactus">
                         <img src="static/Assets/Products/just_tick.svg" alt="">
                     </a>
                 </div>
                 <div class="product ">
-                    <h3>K2 Bundle</h3>
+                    <h3>K2 Bundle <br> <span style="color:#5982c2;position: relative; top: 10px;">$9800</span></h3>
                     <div class="prod-feature">
                         <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>Spend $9.8k 
-                        </p>
+                        <p>300 CRM Leads </p>
                     </div>
                     <div class="prod-feature">
                         <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>300 Chats Engaged
-                        </p>
+                        <p>300 Chats</p>
                     </div>
                     <div class="prod-feature">
                         <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>350 CRM Leads</p>
+                        <p>3000 Bi-Monthly Clicks</p>
                     </div>
                     <div class="prod-feature">
                         <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>3000 Clicks</p>
+                        <p>2 Text Blasts</p>
                     </div>
                     <div class="prod-feature">
                         <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>Bi-Monthly Text Blasts</p>
+                        <p>2 Video Streams</p>
                     </div>
-                    <!-- <div class="prod-feature">
-                        <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>Commercial Streaming</p>
-                    </div>
-                    <div class="prod-feature">
-                        <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>Quaterly Hiring Event</p>
-                    </div> -->
-                    <a class="choose-plan-btn" href="/contactus">
-                        <img src="static/Assets/Products/just_tick.svg" alt="">
-                    </a>
-                </div>
-                <div class="product ">
-                    <h3>Rainier Bundle</h3>
-                    <div class="prod-feature">
-                        <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>Spend $6.2k </p>
-                    </div>
-                    <div class="prod-feature">
-                        <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>125 Chats Engaged</p>
-                    </div>
-                    <div class="prod-feature">
-                        <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>160 CRM Leads</p>
-                    </div>
-                    <div class="prod-feature">
-                        <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>1000 Clicks</p>
-                    </div>
-                    <div class="prod-feature">
-                        <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>Monthly Text Blasts</p>
-                    </div>
-                    <!-- <div class="prod-feature">
-                        <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>Commercial Streaming</p>
-                    </div>
-                    <div class="prod-feature">
-                        <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>Quaterly Hiring Event</p>
-                    </div> -->
+                    
                     <a class="choose-plan-btn" href="/contactus">
                         <img src="static/Assets/Products/just_tick.svg" alt="">
                     </a>
