--- a/templates/html-css-js/services.html
+++ b/templates/html-css-js/services.html
@@ -21,7 +21,7 @@
         <p>LOADING</p>
     </div> -->
     <div id="page">
-        <section id="hero">
+        <section id="hero" class="hero_nav">
             <nav id="navbar">
                 <img src="static/Assets/Products/nav-bg.png" alt="">
                 <a class="nav-item" href="/">
@@ -81,86 +81,8 @@
                 <img class="darkmode-item" src="static/Assets/hamburger.svg" alt="">
                 <img class="lightmode-item"  src="static/light-img/light-hamburger.svg" alt="">
             </div>
-            <img id="grid" src="static/Assets/square-grid.png" alt="">
-            <img src="static/Assets/" alt="">
-            <img class="darkmode-item" id="blob-1" src="static/Assets/Services/blob-1.png" alt="">
-            <img class="darkmode-item" id="blob-2" src="static/Assets/Services/blob-2.png" alt="">
-            <div id="blur"></div>
-            <div id="main-content">
-                <h1>OUR ARENA</h1>
-                <div id="sharp-line"></div>
-                <div id="marquee-clone" class="">
-                    <div id="mov-1" class="mov-container">
-                        <span class="icon-circle">
-                            <img src="static/Assets/Services/icon-1.svg" alt="">
-                        </span>
-                        <span class="icon-circle">
-                            <img src="static/Assets/Services/icon-2.svg" alt="">
-                        </span>
-                        <span class="icon-circle">
-                            <img src="static/Assets/Services/icon-3.svg" alt="">
-                        </span>
-                        <span class="icon-circle">
-                            <img src="static/Assets/Services/icon-4.svg" alt="">
-                        </span>
-                        <span class="icon-circle">
-                            <img src="static/Assets/Services/icon-5.svg" alt="">
-                        </span>
-                        <span class="icon-circle">
-                            <img src="static/Assets/Services/icon-6.svg" alt="">
-                        </span>
-                        <span class="icon-circle">
-                            <img src="static/Assets/Services/icon-7.svg" alt="">
-                        </span>
-                        <span class="icon-circle">
-                            <img src="static/Assets/Services/icon-8.svg" alt="">
-                        </span>
-                    </div>
-                    <!-- <div id="mov-2" class="mov-container x">
-                        <span class="icon-circle">
-                            <img src="static/Assets/Services/icon-1.svg" alt="">
-                        </span>
-                        <span class="icon-circle">
-                            <img src="static/Assets/Services/icon-2.svg" alt="">
-                        </span>
-                        <span class="icon-circle">
-                            <img src="static/Assets/Services/icon-3.svg" alt="">
-                        </span>
-                        <span class="icon-circle">
-                            <img src="static/Assets/Services/icon-4.svg" alt="">
-                        </span>
-                        <span class="icon-circle">
-                            <img src="static/Assets/Services/icon-5.svg" alt="">
-                        </span>
-                        <span class="icon-circle">
-                            <img src="static/Assets/Services/icon-6.svg" alt="">
-                        </span>
-                        <span class="icon-circle">
-                            <img src="static/Assets/Services/icon-7.svg" alt="">
-                        </span>
-                        <span class="icon-circle">
-                            <img src="static/Assets/Services/icon-8.svg" alt="">
-                        </span>
-                    </div> -->
-                    </div>
-                </div>
-
-            </div>
         </section>
-        <section id="incrementSec">
-            <div class="incrementUnit">
-                <h2 id="inc1">+45%</h2>
-                <p>Web Traffic</p>
-            </div>
-            <div class="incrementUnit">
-                <h2 id="inc2">+32%</h2>
-                <p>Leads</p>
-            </div>
-            <div class="incrementUnit">
-                <h2 id="inc3">+27%</h2>
-                <p>Appointments</p>
-            </div>
-        </section>
+        
 
         <div class="mobile-design ">
             <div class="left">
@@ -221,7 +143,20 @@
                 <img src="static/img/{{content[5]['img']}}" alt="">
             </div>
         </div>
-
+        <section id="incrementSec">
+            <div class="incrementUnit">
+                <h2 id="inc1">+45%</h2>
+                <p>Web Traffic</p>
+            </div>
+            <div class="incrementUnit">
+                <h2 id="inc2">+32%</h2>
+                <p>Leads</p>
+            </div>
+            <div class="incrementUnit">
+                <h2 id="inc3">+27%</h2>
+                <p>Appointments</p>
+            </div>
+        </section>
         <img class="darkmode-item" id="waves" src="static/Assets/waves-1.svg" alt="">
         <img class="lightmode-item" id="waves" src="static/Assets/waves_cut.svg" alt="">
 
@@ -230,6 +165,51 @@
             <a href="/contactus">CONTACT US</a>
         </div>
     </div>
+    <section id="hero">
+        
+        
+        
+        <img id="grid" src="static/Assets/square-grid.png" alt="">
+        
+        <!-- <img class="darkmode-item" id="blob-1" src="static/Assets/Services/blob-1.png" alt=""> -->
+        <img class="darkmode-item" id="blob-2" src="static/Assets/Services/blob-2.png" alt="">
+        <div id="blur"></div>
+        <div id="main-content">
+            <h1>OUR ARENA</h1>
+            <div id="sharp-line"></div>
+            <div id="marquee-clone" class="">
+                <div id="mov-1" class="mov-container">
+                    <span class="icon-circle">
+                        <img src="static/Assets/Services/icon-1.svg" alt="">
+                    </span>
+                    <span class="icon-circle">
+                        <img src="static/Assets/Services/icon-2.svg" alt="">
+                    </span>
+                    <span class="icon-circle">
+                        <img src="static/Assets/Services/icon-3.svg" alt="">
+                    </span>
+                    <span class="icon-circle">
+                        <img src="static/Assets/Services/icon-4.svg" alt="">
+                    </span>
+                    <span class="icon-circle">
+                        <img src="static/Assets/Services/icon-5.svg" alt="">
+                    </span>
+                    <span class="icon-circle">
+                        <img src="static/Assets/Services/icon-6.svg" alt="">
+                    </span>
+                    <span class="icon-circle">
+                        <img src="static/Assets/Services/icon-7.svg" alt="">
+                    </span>
+                    <span class="icon-circle">
+                        <img src="static/Assets/Services/icon-8.svg" alt="">
+                    </span>
+                </div>
+                
+            </div>
+        </div>
+
+        
+    </section>
 </body>
 <script src="static/JS/sidebar.js"></script>
 <script src="static/JS/increment.js"></script>
