--- a/static/CSS/services.css
+++ b/static/CSS/services.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
+#hero.hero_nav{
+    height: 230px;
+}
 #blur{
     width: 70%;
     height: 30px;
@@ -119,6 +121,7 @@
     font-family: 'Montserrat', sans-serif;
     font-size: 10px;
     margin-bottom: 50px;
+    margin-top: 100px;
     padding-bottom: 50px;
     /* border-top: 2px solid #242424; */
     border-bottom: 2px solid #191919;
