--- a/static/CSS/spotlight_2.css
+++ b/static/CSS/spotlight_2.css
@@ -256,9 +256,15 @@ video{
     color: #C3C3C3;
     margin: 200px 0 50px 0;
 }
+
+.light .video1_title,.light .video4_title,.light .row_element > h2{
+    color: #535353;
+}
 #page{
     font-size: 10px;
 }
+
+
 
 @media screen and (max-width: 1225px) {
     #page{
