--- a/templates/html-css-js/spotlight_2.html
+++ b/templates/html-css-js/spotlight_2.html
@@ -16,10 +16,10 @@
 </head>
 <script src="static/Load/load.js"></script>
 <body class="light">
-    <div id="load">
+    <!-- <div id="load">
         <lottie-player id="player" src="static/Load/load-car.json"  background="transparent"  speed="1.5"   loop autoplay></lottie-player>
         <p>LOADING</p>
-    </div>
+    </div> -->
     <div id="page">
         <section id="hero">
             <nav id="navbar">
