--- a/static/CSS/home.css
+++ b/static/CSS/home.css
@@ -3,7 +3,7 @@
 #mainTitle{
     position: absolute;
     left: 50%;
-    top: 27%;
+    top: 70%;
     transform: translate(-50%, -50%);
     text-align: center;
     letter-spacing: 2%;
@@ -65,7 +65,7 @@
     padding-bottom: 50px;
     /* border-top: 2px solid #242424; */
     border-bottom: 2px solid #191919;
-    margin-top: -200px;
+    margin-top: -160px;
 }
 
 .light #incrementSec{
@@ -92,7 +92,7 @@
     justify-content: center;
     /* margin:3rem 0; */
     position: absolute;
-    top: 35%;
+    top: 25%;
     /* max-width: 820px; */
     /* max-height: 50%; */
     height: 50%;
@@ -510,7 +510,14 @@
     
 }
 
-
+@media screen and (max-width: 1300px){
+    .hero-video{
+        top: 5%;
+    }
+    #mainTitle{
+        top: 65%;
+    }
+}
 
 @media screen and (min-width: 1400px) {
     #mainTitle{
