--- a/templates/html-css-js/products.html
+++ b/templates/html-css-js/products.html
@@ -19,10 +19,10 @@
 
 <script src="static/Load/load.js"></script>
 <body class="light">
-    <div id="load">
+    <!-- <div id="load">
         <lottie-player id="player" src="static/Load/load-car.json"  background="transparent"  speed="1.5"   loop autoplay></lottie-player>
         <p>LOADING</p>
-    </div>
+    </div> -->
     <div id="page">
         <section id="hero" class="">
             <nav id="navbar">
