--- a/templates/review-upload.html
+++ b/templates/review-upload.html
@@ -25,7 +25,7 @@
     
     <div class="form-group">
         <label>Upload Photo</label>
-        <input class="form-control" type="file" name="img" accept="image/png, image/gif, image/jpeg" required>
+        <input class="form-control image_upload_input" type="file" name="img" accept="image/png, image/gif, image/jpeg" required>
     </div> <br>
     <div class="form-group">
         <label>Review</label>
