--- a/templates/upload-studio-img.html
+++ b/templates/upload-studio-img.html
@@ -4,7 +4,7 @@
     <h1>Studio Image Upload</h1> <br>
     <form enctype="multipart/form-data" action="" method="POST">
         <div class="form-group">
-        <input class="form-control" type=file name="img1" accept="image/png, image/gif, image/jpeg" required>
+        <input class="form-control image_upload_input" type=file name="img1" accept="image/png, image/gif, image/jpeg" required>
         </div> <br>
         <button class="btn btn-primary" type="submit">Submit</button>
     </form>
