--- a/templates/upload-videos.html
+++ b/templates/upload-videos.html
@@ -44,7 +44,7 @@
 
         <div class="form-group">
             <label for="">Video Poster Image (16:9)</label>
-            <input class="form-control" type=file name="video_poster" accept="image/jpeg, image/png, img/jpg" required>
+            <input class="form-control image_upload_input" type=file name="video_poster" accept="image/jpeg, image/png, img/jpg" required>
             <br>
         </div>
 
