--- a/templates/services_upload.html
+++ b/templates/services_upload.html
@@ -16,7 +16,7 @@
             <br>
             <input value="{{content[0]['body']}}" name="s1-body" type="text" class="form-control">
             <br>
-            <input class="form-control" type=file name=photo1 accept="image/png, image/gif, image/jpeg" required> 
+            <input class="form-control image_upload_input" type=file name=photo1 accept="image/png, image/gif, image/jpeg" required> 
         </div>
         <br>
         <hr>
@@ -27,7 +27,7 @@
             <br>
             <input value="{{content[1]['body']}}" name="s2-body" type="text" class="form-control">
             <br>
-            <input class="form-control" type=file name=photo2 accept="image/png, image/gif, image/jpeg" required> 
+            <input class="form-control image_upload_input" type=file name=photo2 accept="image/png, image/gif, image/jpeg" required> 
         </div>
         <br>
         <hr>
@@ -38,7 +38,7 @@
             <br>
             <input value="{{content[2]['body']}}" name="s3-body" type="text" class="form-control">
             <br>
-            <input class="form-control" type=file name=photo3 accept="image/png, image/gif, image/jpeg" required> 
+            <input class="form-control image_upload_input" type=file name=photo3 accept="image/png, image/gif, image/jpeg" required> 
         </div>
         <br>
         <hr>
@@ -49,7 +49,7 @@
             <br>
             <input value="{{content[3]['body']}}" name="s4-body" type="text" class="form-control">
             <br>
-            <input class="form-control" type=file name=photo4 accept="image/png, image/gif, image/jpeg" required> 
+            <input class="form-control image_upload_input" type=file name=photo4 accept="image/png, image/gif, image/jpeg" required> 
         </div>
         <br>
         <hr>
@@ -60,7 +60,7 @@
             <br>
             <input value="{{content[4]['body']}}" name="s5-body" type="text" class="form-control">
             <br>
-            <input class="form-control" type=file name=photo5 accept="image/png, image/gif, image/jpeg" required> 
+            <input class="form-control image_upload_input" type=file name=photo5 accept="image/png, image/gif, image/jpeg" required> 
         </div>
         <br>
         <hr>
@@ -71,7 +71,7 @@
             <br>
             <input value="{{content[5]['body']}}" name="s6-body" type="text" class="form-control">
             <br>
-            <input class="form-control" type=file name=photo6 accept="image/png, image/gif, image/jpeg" required> 
+            <input class="form-control image_upload_input" type=file name=photo6 accept="image/png, image/gif, image/jpeg" required> 
         </div>
         <br>
         <hr>
